cmake_minimum_required(VERSION 2.8)

project(LearnAlgorithm)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

set(SOURCE_DIR src)

set(MERGELIST_SOURCE_LIST ${SOURCE_DIR}/mergeSortedList/merge.cpp)	
set(LEASTKNUMS_SOURCE_LIST ${SOURCE_DIR}/leastKNumbers/findLeastKNums.cpp)	
set(FIRSTREPEATCHAR_SOURCE_LIST ${SOURCE_DIR}/firstNotRepeatChar/solution.cpp)	
set(MINVALUESTACK_SOURCE_LIST ${SOURCE_DIR}/minStack/minValueOfStack.cpp)
set(IMPDEQUE_SOURCE_LIST ${SOURCE_DIR}/useTwoStackImpDeque/main.cpp)	
set(FINDKTHTOTAIL_SOURCE_LIST ${SOURCE_DIR}/findKthToTail/main.cpp)
set(DELETCHAR_SOURCE_LIST ${SOURCE_DIR}/deletChar/main.cpp)
set(GETLONGESTSYSMMERICAL_SOURCE_LIST ${SOURCE_DIR}/getLongestSymmericalLen/main.cpp)
set(MORETHANHALFNUM_SOURCE_LIST ${SOURCE_DIR}/moreThanHalfNum/main.cpp)
set(APPEARONCENUM_SOURCE_LIST ${SOURCE_DIR}/findNumAppearOnce/main.cpp)
set(NUMBEROFONE_SOURCE_LIST ${SOURCE_DIR}/numberof1/main.cpp)
set(GREATESTSUMOFSUBARR_SOURCE_LIST ${SOURCE_DIR}/greatestSumofsubArr/main.cpp)
set(COMMONNODE_SOURCE_LIST ${SOURCE_DIR}/firstCommonNode/firstCommonNode.cpp)
set(FINDNUMBER_SOURCE_LIST ${SOURCE_DIR}/find/main.cpp)		
set(REPLACESPACE_SOURCE_LIST ${SOURCE_DIR}/replacespace/main.cpp)
set(PRINTNODEFROMTAIL_SOURCE_LIST ${SOURCE_DIR}/prinNodeFromTail/main.cpp)
set(REVERSENODE_SOURCE_LIST ${SOURCE_DIR}/reverseListNode/main.cpp)
set(REORDERARRAY_SOURCE_LIST ${SOURCE_DIR}/reOrderArray/main.cpp)					
	
add_executable(MergeList ${MERGELIST_SOURCE_LIST})
add_executable(LeastKNums ${LEASTKNUMS_SOURCE_LIST})
add_executable(FirstRepeatChar ${FIRSTREPEATCHAR_SOURCE_LIST})
add_executable(MinValueOfStack ${MINVALUESTACK_SOURCE_LIST})
add_executable(TwoStackImpQueue ${IMPDEQUE_SOURCE_LIST})
add_executable(FindKthToTail ${FINDKTHTOTAIL_SOURCE_LIST})
add_executable(DeletChar ${DELETCHAR_SOURCE_LIST})
add_executable(GetLongestSymmercial ${GETLONGESTSYSMMERICAL_SOURCE_LIST})
add_executable(GetMoreThanHalfNum ${MORETHANHALFNUM_SOURCE_LIST})
add_executable(FindAppearOnceNum ${APPEARONCENUM_SOURCE_LIST})
add_executable(Numberof1 ${NUMBEROFONE_SOURCE_LIST})
add_executable(MaxSumOfSubArr ${GREATESTSUMOFSUBARR_SOURCE_LIST})
add_executable(FirstCommondNode ${COMMONNODE_SOURCE_LIST})
add_executable(Find ${FINDNUMBER_SOURCE_LIST})
add_executable(ReplaceSpace ${REPLACESPACE_SOURCE_LIST})
add_executable(PrintListNodeFromTail ${PRINTNODEFROMTAIL_SOURCE_LIST})
add_executable(ReverseNode ${REVERSENODE_SOURCE_LIST})
add_executable(ReOrderArray ${REORDERARRAY_SOURCE_LIST})
